@@ -8,14 +8,14 @@
 #
 #                 by 秦凡东
 # ==============================================================================
-function makepatch {
+function mkpatch {
   local DIFF_CMD='diff'
   local patch_base=$1
   local patch_target=$2
   local patch_file=$3
 
   if [[ -z $patch_base || -z $patch_target || -z $patch_file ]]; then
-    echo "Usage: apply <patch_base> <patch-target> <patch_file>"
+    echo "Usage: mkpatch <patch_base> <patch-target> <patch_file>"
     return 1
   fi
 
